# keybot_v2

./: pyproject.toml
keybot_v2/: config.py
keybot_v2/apps/core/: types.py
keybot_v2/apps/discord/domain/: expections.py  models.py  services.py
keybot_v2/apps/discord/repositories/: types.py
keybot_v2/apps/discord/repositories/db/: models.py  repo.py
keybot_v2/apps/discord/repositories/fake/: repo.py  (+1 more)
keybot_v2/apps/discord/tests/: test_domain.py
keybot_v2/apps/discord/unit_of_work/: db.py  fake.py  types.py
keybot_v2/apps/discord/units_of_work/: sqlmodeluow.py  types.py
keybot_v2/apps/discord/utils/: keyparse.py
keybot_v2/apps/games/domain/: models.py  services.py
keybot_v2/apps/games/repositories/: types.py
keybot_v2/apps/games/tests/: test_domain.py
keybot_v2/apps/games/unit_of_work/: fake.py  types.py
keybot_v2/apps/games/utils/: keyparse.py
keybot_v2/domain/: models.py  services.py
keybot_v2/repositories/: types.py
keybot_v2/repositories/db/: models.py  repo.py
keybot_v2/repositories/fake/: models.py  repo.py
keybot_v2/tests/: test_domain.py
keybot_v2/utils/: keyparse.py
src/apps/core/: types.py
src/apps/discord/domain/: expections.py  models.py  services.py
src/apps/discord/repositories/: types.py
src/apps/discord/tests/: test_domain.py
src/apps/discord/unit_of_work/: db.py  fake.py  types.py
src/apps/games/domain/: expections.py  models.py  services.py
src/apps/games/repositories/: types.py
src/apps/games/tests/: test_domain.py
src/apps/games/unit_of_work/: fake.py  types.py
src/apps/games/utils/: keyparse.py
(+9 files in other folders)
